--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 order-sm-first">
                   <!-- Rights-->
-                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>RatherApp</span>
+                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>Berk Aragatnashyk</span>
                   </p>
                 </div>
               </div>
