--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li class="rd-nav-item active"><a class="rd-nav-link" href="#home">Home</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#services">About</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">Services</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="#team">Letters of thank’s</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="#team">Reference Letters</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#contacts">Contacts</a></li>
                       </ul>
                     </div>
@@ -172,7 +172,19 @@
             </ul> -->
           </div>
           <div class="row row-30 isotope" data-isotope-layout="fitRows" data-isotope-group="gallery" data-lightgallery="group">
-
+            <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 4">
+              <!-- Thumbnail Classic-->
+              <article class="thumbnail thumbnail-classic thumbnail-md">
+                <div class="thumbnail-classic-figure"><img src="images/service/teh52.jpg" alt="" width="420" height="350"/>
+                </div>
+                <div class="thumbnail-classic-caption">
+                  <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60" href="images/grid-gallery-1-1200x800-original.jpg" data-lightgallery="item"><img src="images/fullwidth-gallery-1-420x350.jpg" alt="" width="420" height="350"/></a>
+                    <h5 class="thumbnail-classic-title"><a href="#">SENSOR CALIBRATION & SERVO VALVE REPAIR</a></h5>
+                  </div>
+                  <p class="thumbnail-classic-text">Berk Aragatnashyk provides expert repair and calibration of gas turbine components and sensors across Turkmenistan, using certified equipment and international standards.</p>
+                </div>
+              </article>
+            </div>
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 1" data-wow-delay=".1s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
@@ -227,7 +239,6 @@
                 </div>
               </article>
             </div>
-          
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 4" data-wow-delay=".3s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
@@ -241,7 +252,7 @@
                   </p>
                 </div>
               </article>
-            </div>        
+            </div>
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 7" data-wow-delay=".3s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
@@ -323,8 +334,7 @@
       <!-- Meet The Team-->
       <section class="section section-sm section-fluid bg-default" id="team">
         <div class="container-fluid">
-          <h2>Letters of thank’s form
-            our partners</h2>
+          <h2>Customers reference letters</h2>
           <div class="row row-sm row-30 justify-content-center">
             <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInRight">
               <!-- Team Classic-->
